--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,16 @@ plugins {
     id 'java'
 }
 
+jar {
+    manifest {
+        attributes "Main-Class": "app.App"
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 group 'test'
 version '1.0-SNAPSHOT'
 
@@ -15,6 +25,7 @@ repositories {
 }
 
 dependencies {
+    compile fileTree(dir: 'lib', include: '*.jar')
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'serial-port', name: 'serial-port', version: '1.1.2'
 }
